<resources>
    <string name="app_name">DashDoor</string>
    <string name="location">Exercise</string>
    <string name="enter_an_exercise">Enter an Exercise</string>
    <string name="foodType">Weight</string>
    <string name="enter_a_weight">Enter a foodType</string>
    <string name="enter_reps">Enter Reps</string>
    <string name="cost">Reps</string>
    <string name="weight_lb">Weight(lb)</string>
    <string name="log">Log</string>
    <string name="nothing_to_show_time_to_eat">Nothing to show, time to eat</string>
    <string name="welcome_to_the_gymlog_nplease_sign_in">Welcome to the GymLog.\nPlease Sign in.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login!</string>
    <string name="welcome_to_dash_door_hope_you_are_hungry">Welcome to Dash Door, Hope you are Hungry!</string>
    <string name="enter_a_location">Enter a location</string>
    <string name="pepperoni_15">Pepperoni: $15</string>
    <string name="click_to_add_to_cart">Click to Add to Cart!</string>
    <string name="pizza_time">Pizza Time!</string>
    <string name="cheese_12">Cheese: $12</string>
    <string name="meatlovers_12">MeatLovers: $12</string>
    <string name="click_icon_to_add_to_cart">Click Icon to Add to Cart!</string>
    <string name="meatlovers_50">meatlovers $50</string>
    <string name="burger_time">Burger Time!</string>
    <string name="chez_burg_8">Chez Burg: $8</string>
    <string name="fry_fries_5">Fry Fries: $5</string>
    <string name="search_history">search_history</string>
    <string name="view_clients">view_clients</string>
    <string name="self_destruct">self_destruct</string>
    <string name="welcome_admin_user_what_would_you_like_to_do">welcome admin user what would you like to do</string>
</resources>