<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PizzaActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#000000"
    >

    <TextView
        android:id="@+id/pizzaTime"
        android:layout_width="230dp"
        android:layout_height="64dp"
        android:gravity="center"
        android:text="Pizza Time!"
        android:textColor="#39FF14"

        android:textSize="42sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.798" />

    <Button
        android:id="@+id/pepperButton"
        android:layout_width="275dp"
        android:layout_height="92dp"
        android:layout_marginTop="292dp"
        android:background="#D92929"
        android:text="@string/pepperoni_15"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cheeseButton"
        android:layout_width="275dp"
        android:layout_height="92dp"
        android:layout_marginTop="48dp"
        android:background="#D9CA29"
        android:text="@string/cheese_12"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pepperButton" />

    <Button
        android:id="@+id/meatloverButton"
        android:layout_width="275dp"
        android:layout_height="92dp"
        android:layout_marginTop="48dp"
        android:background="#5B3C03"
        android:text="@string/meatlovers_50"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cheeseButton"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/click_icon_to_add_to_cart"
        android:textColor="#39FF14"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/pepperButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>